--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,26 @@
-body {
-
+body,
+body * {
+        box-sizing: border-box;
+        background-color: rgb(124, 214, 226);
+        margin: 0;
+        padding: 0;
+        vertical-align: top;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .container {
-
+    display: inline-block;
+    width: 800px;
+    /* background-color: rgb(219, 157, 157); */
+    margin-top: 100px;
+    margin-left: calc( (100% - 800px) / 2);
 }
 
     .left-column {
+        display: inline-block;
+        width: 40%;
+        background-color: rgb(96, 67, 201);
+        float: left;
 
     }
 
@@ -27,7 +41,11 @@ body {
             }
 
     .right-column {
-
+        display: inline-block;
+        width: 60%;
+        background-color: rgb(255, 255, 255);
+        float: left;
+        padding: 60xp;
         }
 
             .close {
