--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,7 @@ body {
         padding: 40px;
         padding-bottom: 20px;
         background-color: #0069BA;
+        background-image: ;
         color: #fff;
         position: absolute;
         top: 30px;
@@ -56,10 +57,15 @@ body {
                     display: inline-block;
                     width: 60px;
                     height: 60px;
-                    background-color: red;
                     position: absolute;
                     top: 0;
                     right: 0;
+                    line-height: 60px;
+                    text-align: center;
+            }
+
+            .close:hover {
+                cursor: pointer;
             }
 
             
