--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,27 @@
 body {
     background-color: #4BB3C9;
 }
+
+.backgroundblur {
+    background-image: url(../img/hill2.jpg);
+    background-size: cover;
+    background-position: center;
+    filter: blur(20px);
+    height: 100vh;
+    /* z-index: -4; */
+} 
+
 .container {
     display: inline-block;
     width: 800px;
-    margin-top: 100px;
-    margin-left: calc( (100% - 800px) / 2);
-    position: relative;
+    /* left: calc( (100% - 800px) / 2);
+    top: calc( (100% - 400px) / 2); */
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    /* elemento plocio ir aukscio atzviliu patrauk ji atgal per puse elemento dydzio - tai pastato elemta i centriuka */
+    
 }
 
 
@@ -16,15 +31,17 @@ body {
         padding: 40px;
         padding-bottom: 20px;
         background-color: #0069BA;
-        background-image: url(../img/hill.jpg);
+        background-image: url(../img/hill2.jpg);
+        background-size: cover;
+        background-position: center;
         color: #fff;
         position: absolute;
         top: 30px;
         bottom: 30px;
-        z-index: -2;
+        /* z-index: -2; */
     }
 
-    .left-column::after {
+    /* .left-column::after {
         content: " ";
         position: absolute;
         top: 0;
@@ -32,10 +49,9 @@ body {
         width: 100%;
         height: 100%;
         background-color: rgb(65, 43, 122);
-        background-size: cover;
         opacity: 0.6;
         z-index: -1;
-    }
+    } */
 
         .page-title {
             display: inline-block;
